Try to fix search box layout on mobile size devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,7 +170,7 @@ input[type=text]:not(.browser-default){
 .search-form input[type=text]:not(.browser-default){
     background-color:ivory;
     border-radius: 20px;
-    
+    max-height: 3rem;
     width: 80%;
     font-size: inherit;
     padding-left: 1rem;
